test/TestPhases/causality/valid/SingletonOk.blc
@[CFunction(binding="",header="")]
extern singleton function g()
    

singleton function f()
end

activity B()
    f()
    await true
    f()
end

singleton activity C ()
    await false
end

@[EntryPoint]
activity A()
    cobegin
        run B()
    with
        run C()
    end

    cobegin
        run C()
    with
        g()
        f()
        await true
        g()
        f()
    end
    
    run B()
    g()
    f()
    g()
    run C()
end